Premier commit : version initiale du cookie casino

--- a/index.html
+++ b/index.html
@@ -1,192 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>BDE Cookie Clicker</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Un Cookie Clicker moderne et personnalisable pour le site de ton BDE. Clique, améliore et finance les soirées étudiantes !">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/styles.css">
+    <meta charset="UTF-8" />
+    <title>Imtmortels Cookie Casino</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description"
+          content="Un Cookie Clicker / Casino en React. Clique, upgrade et tente ta chance avec la roue et les lootboxes." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+          rel="stylesheet" />
 </head>
-<body class="theme-dark">
-  <div id="app" class="app-shell">
-    <header class="app-header">
-      <div class="app-header-left">
-        <h1 class="app-title">BDE Cookie Clicker</h1>
-        <p class="app-subtitle">
-          Clique sur le cookie pour produire des fonds, acheter des bâtiments BDE et débloquer des soirées de légende.
-        </p>
-      </div>
-      <div class="app-header-right">
-        <div class="header-pill">
-          <span class="pill-label">Partie</span>
-          <span class="pill-value" data-bind="playtime">0 min</span>
-        </div>
-        <button class="btn btn-ghost icon-only" data-action="toggle-theme" aria-label="Changer de thème">
-          <span class="icon" data-icon-theme>🌙</span>
-        </button>
-        <button class="btn btn-ghost" data-action="toggle-sound">
-          <span class="icon" aria-hidden="true">🔊</span>
-          <span data-sound-label>Son activé</span>
-        </button>
-        <button class="btn btn-outline" data-action="save-game">
-          Sauvegarder
-        </button>
-      </div>
-    </header>
-
-    <main class="layout">
-      <!-- Colonne principale : cookie + stats -->
-      <section class="column column-main" aria-label="Zone principale">
-        <div class="card card-primary">
-          <div class="counter">
-            <div class="counter-label">Cookies actuels</div>
-            <div class="counter-value" data-bind="cookies">0</div>
-            <div class="counter-sub">
-              <span data-bind="cps">0 cookies / sec</span>
-            </div>
-          </div>
-
-          <button class="cookie-button" data-role="main-cookie" aria-label="Cliquer sur le cookie">
-            <div class="cookie-ring"></div>
-            <img src="./img/perfectCookie.png" alt="Gros cookie" class="cookie-image">
-            <span class="cookie-button-hint">Clique pour produire des cookies ✨</span>
-          </button>
-
-          <div class="quick-stats">
-            <div class="quick-stat">
-              <span class="quick-stat-label">Total produits</span>
-              <span class="quick-stat-value" data-bind="totalCookies">0</span>
-            </div>
-            <div class="quick-stat">
-              <span class="quick-stat-label">Par clic</span>
-              <span class="quick-stat-value" data-bind="cpc">+1</span>
-            </div>
-            <div class="quick-stat">
-              <span class="quick-stat-label">Prestige</span>
-              <span class="quick-stat-value" data-bind="prestige">0</span>
-            </div>
-          </div>
-        </div>
-
-        <section class="card milestones" aria-label="Objectifs rapides">
-          <header class="card-header">
-            <h2>Prochains objectifs</h2>
-          </header>
-          <ul class="goals-list" data-list="bde-goals"></ul>
-        </section>
-      </section>
-
-      <!-- Colonne boutique -->
-      <section class="column column-shop" aria-label="Boutique BDE">
-        <section class="card list-card" aria-label="Bâtiments BDE">
-          <header class="card-header">
-            <h2>Bâtiments BDE</h2>
-            <span class="card-header-sub" data-bind="buildingsCps">0 cookies / sec</span>
-          </header>
-          <div class="list" data-list="buildings"></div>
-        </section>
-
-        <section class="card list-card" aria-label="Améliorations">
-          <header class="card-header">
-            <h2>Améliorations</h2>
-            <span class="card-header-sub" data-bind="upgradesAvailable">0 disponibles</span>
-          </header>
-          <div class="list" data-list="upgrades"></div>
-          <p class="empty-state" data-upgrade-empty>
-            Aucune amélioration disponible pour le moment. Continue à cliquer et à acheter des bâtiments !
-          </p>
-        </section>
-      </section>
-
-      <!-- Colonne dashboard -->
-      <section class="column column-dashboard" aria-label="Dashboard BDE">
-        <section class="card" aria-label="Indicateurs BDE">
-          <header class="card-header">
-            <h2>Dashboard BDE</h2>
-          </header>
-          <div class="dashboard-grid">
-            <div class="dashboard-metric">
-              <div class="metric-label">Soirées financées</div>
-              <div class="metric-value" data-bind="bde-parties">0</div>
-              <div class="metric-sub">Objectif : 10 / semestre</div>
-            </div>
-            <div class="dashboard-metric">
-              <div class="metric-label">Projets associatifs</div>
-              <div class="metric-value" data-bind="bde-projects">0</div>
-              <div class="metric-sub">Clubs, week-ends, voyages...</div>
-            </div>
-            <div class="dashboard-metric">
-              <div class="metric-label">Goodies distribués</div>
-              <div class="metric-value" data-bind="bde-goodies">0</div>
-              <div class="metric-sub">T-shirts, sweats, tote bags</div>
-            </div>
-            <div class="dashboard-metric">
-              <div class="metric-label">Rang étudiant</div>
-              <div class="metric-value" data-bind="bde-rank">Licence 1</div>
-              <div class="metric-sub">Progresse avec ton prestige</div>
-            </div>
-          </div>
-        </section>
-
-        <section class="card" aria-label="Trophées">
-          <header class="card-header">
-            <h2>Trophées</h2>
-            <span class="card-header-sub" data-bind="achievementsCount">0 débloqués</span>
-          </header>
-          <div class="badges" data-list="achievements"></div>
-          <p class="empty-state" data-achievement-empty>
-            Joue un peu pour commencer à débloquer des trophées !
-          </p>
-        </section>
-      </section>
-    </main>
-
-    <footer class="app-footer">
-      <div class="footer-left">
-        <button class="btn btn-ghost btn-sm" data-action="export-save">Exporter la sauvegarde</button>
-        <button class="btn btn-ghost btn-sm" data-action="import-save">Importer</button>
-        <button class="btn btn-danger btn-sm" data-action="hard-reset">Réinitialiser</button>
-      </div>
-      <div class="footer-right">
-        <span class="footer-text">Liens BDE :</span>
-        <a href="#" class="footer-link" data-link="bde-events">Événements</a>
-        <a href="#" class="footer-link" data-link="bde-partners">Partenaires</a>
-        <a href="#" class="footer-link" data-link="bde-join">Rejoindre le BDE</a>
-      </div>
-    </footer>
-
-    <!-- Modale import/export -->
-    <div class="modal hidden" data-modal="import">
-      <div class="modal-backdrop" data-action="close-modal"></div>
-      <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="import-title">
-        <header class="modal-header">
-          <h2 id="import-title">Importer une sauvegarde</h2>
-          <button class="btn btn-ghost icon-only" data-action="close-modal" aria-label="Fermer la fenêtre">
-            ✕
-          </button>
-        </header>
-        <div class="modal-body">
-          <p>Colle ici le code de sauvegarde exporté depuis un autre navigateur.</p>
-          <textarea class="modal-textarea" data-import-text rows="5" placeholder="Colle ta sauvegarde ici"></textarea>
-          <p class="modal-helper">⚠️ Cette action remplacera ta partie actuelle.</p>
-        </div>
-        <footer class="modal-footer">
-          <button class="btn btn-ghost" data-action="close-modal">Annuler</button>
-          <button class="btn btn-primary" data-action="confirm-import">Importer</button>
-        </footer>
-      </div>
-    </div>
-
-    <!-- Toast notifications -->
-    <div class="toast-container" aria-live="polite" aria-atomic="true"></div>
-
-    <!-- Couche pour les +X flottants -->
-    <div class="floating-clicks-layer" aria-hidden="true"></div>
-  </div>
-
-  <script type="module" src="./js/main.js"></script>
+<body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
